# rusty_chess

./: .gitignore  Cargo.toml  README.md  build_win.sh  config.toml  start.sh  start_gui.sh
src/: bb_main.rs  benches.rs  bitboard.rs  board.rs  main.rs  old.rs  tests.rs  traits.rs
