[package]
name = "rusty_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
# overflow-checks = true
panic = "abort"
# debug = true

[dependencies]
# mimalloc = { version = "0.1.34", default-features = false }
