[package]
name = "rusty_chess"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
# overflow-checks = true
# debug = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1
strip = "symbols"

[profile.test]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
bitintr = "0.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.163", features = ["derive"] }
hashbrown = { version = "0.13.2", features = ["nightly"] }
mimalloc = { version = "0.1.37", default-features = false }
